# youtube-feed

./: .env.example  .gitignore  README.md  pyproject.toml
src/youtube_feed/: __init__.py  __main__.py  channel_lookup.py  cli.py  config.py  db.py  exceptions.py  gemini_rate_limiter.py  logging_config.py  models.py  retry_policy.py  rss.py  scoring.py  summarizer.py  telegram.py  transcripts.py  workflow.py
tests/: test_channel_lookup.py  test_config.py  test_db.py  test_gemini_rate_limiter.py  test_retry_policy.py  test_rss.py  test_summarizer.py  test_telegram.py  test_workflow.py
